--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
     <h1>Ovo je sajt, moj prvi sajt </h1>
-    <p><Dobrodosli-dovidjenja></Dobrodosli-dovidjenja></p>
+    <p><Dobrodosli-dovidjenja-tornjajte se></p>
     </body>
     
 </html>
