--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
-        <title>IlijA- Moj prvi sajjt </title>
+        <title>Ukulele Srbija </title>
     </head>
-    <body>
-    <h1>Ovo je sajt, moj prvi sajt </h1>
+    <body text="#FF0000" background="maxresdefault.jpg">
+        <center>
+    <h1>Dobro dosli dobri ljudi </h1>
+    <h2>Aloha put je nas put</h2>
+    <H3> Pogledajte<a href= "https://www.facebook.com/ukulelesrbija/" target="_blank" style= text-decoration-color:rgb(8, 83, 8)> <strong>OVDE</strong> </a> nasu fejsbuk stranicu da vidite kad su nova okupljanja </H3>
     <p><Dobrodosli-dovidjenja-tornjajte se></p>
+        <iframe width="420" height="315"
+        src="https://www.youtube.com/watch?v=uEh_gmdtOSc?autoplay=1">
+        </iframe> 
+        </center>/
     </body>
     
 </html>
