--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Dobro dosli dobri ljudi </h1>
     <h2>Aloha put je nas put</h2>
                     <body>
-        <iframe width="520" height="315"src="https://www.youtube.com/watch?v=a_AvY7lFsvU">
-        </iframe>
+        <iframe width="520" height="315"src="https://www.youtube.com/watch?v=a_AvY7lFsvU"></iframe>
                     </body> 
         <style>
                 .parallax {
@@ -31,7 +30,7 @@
                 
                 <p>Filip voli kad se sajt lepo skroluje, zato lepo skrolujte na dole</p>
                  <div class="parallax"></div>                
-                <div style="height:1000px;background-color:rgb(116, 201, 240);font-size:36px">
+                <div style="height:600px;background-color:rgb(116, 201, 240);font-size:36px">
                 Pomerajte sad gore dole da vidite kako sam ovo zajebano napravio :D
                <body>
                 <iframe width="520" height="315"src="https://www.youtube.com/watch?v=Jea56WuMReQ"></iframe>
