--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Dobro dosli dobri ljudi </h1>
     <h2>Aloha put je nas put</h2>
                     <body>
-        <iframe width="520" height="315"src="https://www.youtube.com/watch?v=a_AvY7lFsvU"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/a_AvY7lFsvU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                     </body> 
         <style>
                 .parallax {
@@ -33,7 +33,7 @@
                 <div style="height:600px;background-color:rgb(116, 201, 240);font-size:36px">
                 Pomerajte sad gore dole da vidite kako sam ovo zajebano napravio :D
                <body>
-                <iframe width="520" height="315"src="https://www.youtube.com/watch?v=Jea56WuMReQ"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Jea56WuMReQ" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                </body>
                
                <h4>Ovo mesto je namenjeno istinskim ljubiteljima ovog instrumenta</h4>
