zajebava me stalno nesto

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
         <div class="parallax"></div>
         <div style="height:600px;background-color:rgb(116, 201, 240);font-size:36px">         
-           <hr/>
+           
+
            <iframe width="560" height="315" src="https://www.youtube.com/embed/a_AvY7lFsvU" frameborder="0" gesture="media" allow="encrypted-media"
            allowfullscreen></iframe>
 
          <p>Trudimo se da organizujemo redovna mesecna okupljanja na koja su svi dobro dosli!</p>   
         <H3> Pogledajte
-            <a href="https://www.facebook.com/ukulelesrbija/" target="_blank" style=text-decoration-color:rgb(8,83,8)>
+            <a href="https://www.facebook.com/ukulelesrbija/"  target="_blank" style=text-decoration-color:rgb(8,83,8)/>
                 <strong><em>OVDE</em></strong>
             </a> nasu fejsbuk stranicu da vidite kad su nova okupljanja </H3>
 
