--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <center>
     <body text="#800000" background="pozadina.jpg">
-        <img src="kuca.jpg" height="60"/>  <img src="onama.jpg" height="60"/>  <img src="skola.jpg" height="60"/>  <img src="fotografije.jpg" height="60"/> <img src="video.jpg" height="60"/> <img src="bitni.jpg" height="60"/>  <img src="okupljanjam.jpg" height="60"/>
+        <img src="kuca.jpg" />  <img src="onama.jpg" />  <img src="skola.jpg" />  <img src="fotografije.jpg" /> <img src="video.jpg" /> <img src="bitni.jpg" />  <img src="okupljanjam.jpg" />
         
         <h1>Dobro dosli dobri ljudi </h1>
         <h2>Ova stranica okuplja sve ljubitelje ovog prelepog intrumenta. <br/>One koji  planiraju da nauce da sviraju,<br/> ili su samo zainteresovani da cuju nesto vise o ovom instrumentu.</h2>
@@ -32,7 +32,7 @@
         <div class="parallax"></div>
         <div style="height:600px;background-color:rgb(116, 201, 240);font-size:36px">         
            
-
+<br/>
            <iframe width="560" height="315" src="https://www.youtube.com/embed/a_AvY7lFsvU" frameborder="0" gesture="media" allow="encrypted-media"
            allowfullscreen></iframe>
 
@@ -41,6 +41,7 @@
             <a href="https://www.facebook.com/ukulelesrbija/"  target="_blank" style=text-decoration-color:rgb(8,83,8)/>
                 <strong><em>OVDE</em></strong>
             </a> nasu fejsbuk stranicu da vidite kad su nova okupljanja </H3>
+<br/>
 
             <h4>Takodje nam mozete pisati na nasu <a href="mailto:ukulelesrbija@gmail.com">E-mail adresu </a> </h4>
 </center>
