promene koje ne rade

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </style>
 
         <div class="parallax"></div>
-        <div style="height:600px;background-color:rgb(116, 201, 240);font-size:36px">         
+        <div style="height:600px;background transparent;font-size:36px">         
            
 <br/>
            <iframe width="560" height="315" src="https://www.youtube.com/embed/a_AvY7lFsvU" frameborder="0" gesture="media" allow="encrypted-media"
