promene koje ne rade

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 </head>
 
 <center>
-    <body text="#800000" background="pozadina.jpg">
-        <img src="kuca.jpg" />  <img src="onama.jpg" />  <img src="skola.jpg" />  <img src="fotografije.jpg" /> <img src="video.jpg" /> <img src="bitni.jpg" />  <img src="okupljanjam.jpg" />
+    <style>
+    body  {
+        background-image:url(pozadina.jpg);
+        background-repeat:no-repeat;
+        background-position: 50%   
+    }
+</style>
+
+
+        <img src="onama.png" />  <img src="skola.png" />  <img src="fotografije.png" /> <img src="video.png" /> <img src="istorija.png" />
         
         <h1>Dobro dosli dobri ljudi </h1>
         <h2>Ova stranica okuplja sve ljubitelje ovog prelepog intrumenta. <br/>One koji  planiraju da nauce da sviraju,<br/> ili su samo zainteresovani da cuju nesto vise o ovom instrumentu.</h2>
@@ -16,6 +24,7 @@
 <p>                                                    </p>
 
         <style>
+
             .parallax {
 
                 background-image: url("Ukulele.jpg");
@@ -36,15 +45,22 @@
            <iframe width="560" height="315" src="https://www.youtube.com/embed/a_AvY7lFsvU" frameborder="0" gesture="media" allow="encrypted-media"
            allowfullscreen></iframe>
 
+           <style type="text/css">
+                
+                p, h1,h2,h3,h4 {color:darkmagenta;font-family: comica BD bold;line-height:130% }
+            h1 {font-size: 86px; text-shadow: 22px darkblue;}
+            </style>
+
          <p>Trudimo se da organizujemo redovna mesecna okupljanja na koja su svi dobro dosli!</p>   
         <H3> Pogledajte
-            <a href="https://www.facebook.com/ukulelesrbija/"  target="_blank" style=text-decoration-color:rgb(8,83,8)/>
+            <a href="https://www.facebook.com/ukulelesrbija/"  target="_blank" style=text-decoration-color:darkmagenta;)/>
                 <strong><em>OVDE</em></strong>
             </a> nasu fejsbuk stranicu da vidite kad su nova okupljanja </H3>
 <br/>
 
             <h4>Takodje nam mozete pisati na nasu <a href="mailto:ukulelesrbija@gmail.com">E-mail adresu </a> </h4>
 </center>
+
 </body>
 
 </html>
