--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     body  {
         background-image:url(pozadina.jpg);
         background-repeat:no-repeat;
-        background-position: 50%   
+        background-position: 100%   
     }
 </style>
 
-
-        <img src="onama.png" />  <img src="skola.png" />  <img src="fotografije.png" /> <img src="video.png" /> <img src="istorija.png" />
-        
+<table width="100%" >
+        <tr>
+           <td><img src="onama.png" /></td>
+            <td><img src="skola.png" /></td>
+          <td><img src="fotografije.png" /></td> 
+          <td><img src="video.png" /></td>
+           <td><img src="istorija.png" /></td>
+</tr>
+       </table> 
         <h1>Dobro dosli dobri ljudi </h1>
         <h2>Ova stranica okuplja sve ljubitelje ovog prelepog intrumenta. <br/>One koji  planiraju da nauce da sviraju,<br/> ili su samo zainteresovani da cuju nesto vise o ovom instrumentu.</h2>
 <img src="coverimage.jpg" height="650"/>
@@ -46,18 +52,19 @@
            allowfullscreen></iframe>
 
            <style type="text/css">
+                a:link {color:blueviolet;}
+                a:hover {font-weight:bold;}
                 
-                p, h1,h2,h3,h4 {color:darkmagenta;font-family: comica BD bold;line-height:130% }
+                p, h1,h2,h3,h4,h5 {color:darkmagenta;font-family: 'Times New Roman';line-height:130% }
             h1 {font-size: 86px; text-shadow: 22px darkblue;}
             </style>
 
-         <p>Trudimo se da organizujemo redovna mesecna okupljanja na koja su svi dobro dosli!</p>   
-        <H3> Pogledajte
+         <h5>Trudimo se da organizujemo redovna mesecna okupljanja na koja su svi dobro dosli!</h5>   
+        <H3> Pogledajte nasu
             <a href="https://www.facebook.com/ukulelesrbija/"  target="_blank" style=text-decoration-color:darkmagenta;)/>
-                <strong><em>OVDE</em></strong>
-            </a> nasu fejsbuk stranicu da vidite kad su nova okupljanja </H3>
+                <strong><em>Fejsbuk</em></strong>
+            </a> stranicu da vidite kad su nova okupljanja </H3>
 <br/>
-
             <h4>Takodje nam mozete pisati na nasu <a href="mailto:ukulelesrbija@gmail.com">E-mail adresu </a> </h4>
 </center>
 
